--- a/1с/Строки.md
+++ b/1с/Строки.md
@@ -19,3 +19,10 @@
 МассивКопия = ЗначениеИзСтрокиВнутр(Стр);
 Элемент = МассивКопия[1];
 Сообщить(Элемент); // Земля
+
+
+МояСтрока = "токарь третьего разряда";
+МассивВариантов = ПолучитьСклоненияСтроки(МояСтрока,
+"ПЛ=Мужской",
+"ПД=Дательный");
+Сообщить(СтрСоединить(МассивВариантов, ", "));
